--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/pdf-to-image": "^1.2",
         "yaza/laravel-google-drive-storage": "^2.0"
     },
     "require-dev": {
