--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "google/apiclient": "^2.18",
         "guzzlehttp/guzzle": "^7.2",
+        "hashids/hashids": "^5.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
