--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "openai-php/client": "^0.10.1",
+        "openai-php/laravel": "^0.10.1",
         "spatie/pdf-to-image": "^1.2",
         "yaza/laravel-google-drive-storage": "^2.0"
     },
